add target _blank to links

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li class="nav-item"><a class="nav-link" href="#service">Service</a></li>
                             <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="#testimonial">Testimonial</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li> -->
                             <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                         </ul>
                         <!-- <ul class="nav navbar-nav navbar-right d-md-none d-lg-block">
@@ -63,10 +63,10 @@
                     <h2 class="wow fadeInLeft animated">I am Gabriel Hildreth,</h2>
                     <h4 class="wow fadeInUp anoimated">Full-Stack Developer</h4>
                     <ul class="list_style social_icon">
-                        <li class="wow fadeInUp animated" data-wow-delay="0.3s"><a href="https://www.linkedin.com/in/ghildreth"><i class="social_linkedin"></i></a></li>
+                        <li class="wow fadeInUp animated" data-wow-delay="0.3s"><a href="https://www.linkedin.com/in/ghildreth" target="_blank"><i class="social_linkedin"></i></a></li>
                         <!-- <li class="wow fadeInUp animated" data-wow-delay="0.5s"><a href="#"><i class="social_twitter"></i></a></li> -->
                         <!-- <li class="wow fadeInUp animated" data-wow-delay="0.7s"><a href="#"><i class="social_googleplus"></i></a></li> -->
-                        <li class="wow fadeInUp animated" data-wow-delay="0.8s"><a href="https://www.instagram.com/gabrielhildreth/"><i class="social_instagram"></i></a></li>
+                        <li class="wow fadeInUp animated" data-wow-delay="0.8s"><a href="https://www.instagram.com/gabrielhildreth/" target="_blank"><i class="social_instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -80,10 +80,10 @@
                     <div class="col-md-7 d-flex align-items-center">
                         <div class="about_content">
                             <h2 class="t_color wow fadeInUp">About Me.</h2>
-                            <h6 class="wow fadeInUp" data-wow-delay="0.3s">UI / UX DESIGNER & WEB DEVELOPER</h6>
-                            <p>I am <span>Gabriel Hildreth</span>. I wish to use my knowledge of sociology, mixed with my background in hospitality, and love for music to create meaningful applications that will have a lasting impact on society.</p>
+                            <h6 class="wow fadeInUp" data-wow-delay="0.3s">WEB DEVELOPER & UI / UX DESIGNER </h6>
+                            <p>I wish to use my knowledge of sociology, mixed with my background in hospitality, and love for music to create meaningful applications that will have a lasting impact on society.</p>
                             <!-- <a href="#" class="theme_btn wow fadeInLeft animated">Hire Me</a> -->
-                            <a href="https://resume.creddle.io/resume/h55x9qcr853" class="theme_btn wow fadeInRight animated">My CV</a>
+                            <a href="https://resume.creddle.io/resume/h55x9qcr853" class="theme_btn wow fadeInRight animated" target="_blank">My CV</a>
                         </div>
                     </div>
                     <div class="col-md-5">
@@ -500,14 +500,14 @@
                                             <i class="icon_globe"></i>
                                         </a>
                                         <div class="media-body">
-                                            <a href="#">My Repositories: https://github.com/ghildreth</a>
+                                            <a href="https://github.com/ghildreths">My Repositories: https://github.com/ghildreth</a>
                                         </div>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-7 wow fadeInLeft" data-wow-delay="0.2s">
+                    <!-- <div class="col-md-7 wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="input_form">
                             <h4>Contact Form</h4>
                             <form action="contact_process.php" id="contactForm" novalidate="novalidate">
@@ -533,7 +533,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!--=============End contact area============-->
         
