--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="container custome_container">
-                    <a class="navbar-brand logo_h" href="index.html"><img src="http://www.ghrubbersolutions.co.uk/communities/8/004/013/269/188//images/4624576141_212x188.jpg" alt=""><img src="http://www.ghrubbersolutions.co.uk/communities/8/004/013/269/188//images/4624576141_212x188.jpg" alt=""></a>
+                    <a class="navbar-brand logo_h" href="index.html"><img src="http://www.ghrubbersolutions.co.uk/communities/8/004/013/269/188//images/4624576141_212x188.jpg" alt="GH"></a>
                     <!-- <a href="#" class="btn get-btn get-btn-two d-lg-none d-md-block login">Login</a> -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
