--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Gabriel Hildreth Portfolio</title>
         <!-- favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="image/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="x/favicon.ico">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/elagent-icon/style.css">
