--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <section class="banner_area" id="home">
             <div class="container">
                 <div class="banner_content">
-                    <h5 class="wow fadeInUp animated">Welcome</h5>
-                    <h2 class="wow fadeInLeft animated">I am Gabriel Hildreth,</h2>
+                    <h5 class="wow fadeInUp animated">Welcome to my page</h5>
+                    <h2 class="wow fadeInLeft animated">My name is Gabriel Hildreth,</h2>
                     <h4 class="wow fadeInUp anoimated">Full-Stack Developer</h4>
                     <ul class="list_style social_icon">
                         <li class="wow fadeInUp animated" data-wow-delay="0.3s"><a href="https://www.linkedin.com/in/ghildreth" target="_blank"><i class="social_linkedin"></i></a></li>
@@ -81,7 +81,7 @@
                         <div class="about_content">
                             <h2 class="t_color wow fadeInUp">About Me.</h2>
                             <h6 class="wow fadeInUp" data-wow-delay="0.3s">WEB DEVELOPER & UI / UX DESIGNER </h6>
-                            <p>I wish to use my knowledge of sociology, mixed with my background in hospitality, and love for music to create meaningful applications that will have a lasting impact on society.</p>
+                            <p>I have a diverse background of sales, customer service and now web development. I'm enthusiastic, high energy and passionate about learning.</p>
                             <!-- <a href="#" class="theme_btn wow fadeInLeft animated">Hire Me</a> -->
                             <a href="https://resume.creddle.io/resume/h55x9qcr853" class="theme_btn wow fadeInRight animated" target="_blank">My CV</a>
                         </div>
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="section_title text-center mb_60">
                     <h2 class="mb_0 title_h2 t_color wow fadeInUp" data-wow-delay="0.3s">So, what have you done?</h2>
-                    <p class="mb_0 title_p wow fadeInUp" data-wow-delay="0.6s">I love building things... It all started in my Mother's pantry as a child, I would take boxes and arrange them into structures... Then it was Duplos => Legos => Minecraft => Wait, how did they make this game?</p>
+                    <p class="mb_0 title_p wow fadeInUp" data-wow-delay="0.6s">I love building things... </p>
                     <span class="bottom_line wow fadeInLeft" data-wow-delay="0.9s"></span>
                 </div>
                 <div class="row">
@@ -123,7 +123,7 @@
                         <div class="work_item wow fadeInUp" data-wow-delay="0.6s">
                             <i class="icon-presentation"></i>
                             <h2 class="t_color">Lighthouse Labs</h2>
-                            <p>I chose to switch careers because I wanted stop being the consumer and use my creativity to produce. Lighthouse Labs gave me the guidance I needed to build apps and websites using powerful languages, libraries, frameworks.</p>
+                            <p>I chose to switch careers because I wanted stop being the passive consumer and start actively creating. Lighthouse Labs gave me the guidance I needed to build apps and websites using powerful languages, libraries, frameworks.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -500,7 +500,7 @@
                                             <i class="icon_globe"></i>
                                         </a>
                                         <div class="media-body">
-                                            <a href="https://github.com/ghildreths">My Repositories: https://github.com/ghildreth</a>
+                                            <a href="https://github.com/ghildreth">My Repositories: https://github.com/ghildreth</a>
                                         </div>
                                     </div>
                                 </li>
