--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Gabriel Hildreth Portfolio</title>
+        <title>Gabriel Hildreth</title>
         <!-- favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="x/favicon.ico">
         <!-- Bootstrap CSS -->
@@ -24,7 +24,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="container custome_container">
-                    <a class="navbar-brand logo_h" href="index.html"><img src="http://www.ghrubbersolutions.co.uk/communities/8/004/013/269/188//images/4624576141_212x188.jpg" alt="GH"></a>
+                    <a class="navbar-brand logo_h" href="index.html">GH</a>
                     <!-- <a href="#" class="btn get-btn get-btn-two d-lg-none d-md-block login">Login</a> -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -36,7 +36,7 @@
                         <ul class="nav navbar-nav m-auto">
                             <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#service">Service</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="#service">Service</a></li> -->
                             <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="#testimonial">Testimonial</a></li> -->
                             <!-- <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li> -->
@@ -59,9 +59,9 @@
         <section class="banner_area" id="home">
             <div class="container">
                 <div class="banner_content">
-                    <h5 class="wow fadeInUp animated">Welcome to my page</h5>
-                    <h2 class="wow fadeInLeft animated">My name is Gabriel Hildreth,</h2>
-                    <h4 class="wow fadeInUp anoimated">Full-Stack Developer</h4>
+                    <h5 class="wow fadeInUp animated">Welcome</h5>
+                    <h2 class="wow fadeInLeft animated">Gabriel Hildreth,</h2>
+                    <h4 class="wow fadeInUp anoimated">Developer</h4>
                     <ul class="list_style social_icon">
                         <li class="wow fadeInUp animated" data-wow-delay="0.3s"><a href="https://www.linkedin.com/in/ghildreth" target="_blank"><i class="social_linkedin"></i></a></li>
                         <!-- <li class="wow fadeInUp animated" data-wow-delay="0.5s"><a href="#"><i class="social_twitter"></i></a></li> -->
